added repo url to package.json for NPM
and fixed a part, that was used for testing

--- a/app-kiosk/package.json
+++ b/app-kiosk/package.json
@@ -10,6 +10,10 @@
   },
   "author": "Nabil Redmann <repo+electron@bananaacid.de>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BananaAcid/Simple-Electron-Kiosk.git"
+  },
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-electron": "^1.4.15",
