--- a/app-kiosk/package.json
+++ b/app-kiosk/package.json
@@ -3,9 +3,9 @@
   "productName": "Simple Electron Kiosk",
   "version": "1.0.0",
   "description": "A basic and super simple electron and babel based kiosk",
-  "main": "index.mjs",
+  "main": "loader.babel.js",
   "scripts": {
-    "start": "electron loader.babel.js",
+    "start": "DEBUG=*,-babel  electron loader.babel.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nabil Redmann <repo+electron@bananaacid.de>",
@@ -15,6 +15,7 @@
     "url": "git+https://github.com/BananaAcid/Simple-Electron-Kiosk.git"
   },
   "dependencies": {
+    "app-root-path": "^2.1.0",
     "babel-core": "^6.26.3",
     "babel-preset-electron": "^1.4.15",
     "electron": "^2.0.4"
