--- a/app-kiosk/package.json
+++ b/app-kiosk/package.json
@@ -15,14 +15,12 @@
     "url": "git+https://github.com/BananaAcid/Simple-Electron-Kiosk.git"
   },
   "dependencies": {
-    "@types/app-root-path": "^1.2.4",
-    "@types/debug": "^4.1.7",
     "app-root-path": "^3.0.0",
     "electron": "^19.0.8",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-electron": "^1.4.15"
+    "@types/app-root-path": "^1.2.4",
+    "@types/debug": "^4.1.7"
   }
 }
